# bank_operarions_app

./: .env_template  .flake8  .gitignore  README.md  config.py  main.py  pyproject.toml
src/: reports.py  services.py  utils.py  utils1.py  views.py
tests/: conftest.py  test_reports.py  test_services.py  test_utils.py  test_views.py
